--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,24 +7,77 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <script src="https://cdn.skypack.dev/@hotwired/turbo"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hotwired/turbo"></script>
     <script src="https://unpkg.com/@hotwired/turbo@7.3.0/dist/turbo.es2017-umd.js"></script>
+
+    <link rel="stylesheet" th:href="@{/Style/index.css}">
+    <link rel="stylesheet" th:href="@{/Style/Chat.css}">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
 </head>
 <body>
-    <form id="usernameForm" name="usernameForm">
-            <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"/>
-            <button type="submit" class="accent username-submit">Connetti</button>
-    </form><br>
+    <div class="tab">
+        <button class="tablinks" onclick="openTab('UsersConnected')">Connessi</button>
+        <button class="tablinks" onclick="openTab('Chat')">Chat</button>
+        <button class="tablinks" onclick="openTab('Inviti')">Inviti</button>
+    </div>
 
-    <div class="area-user-connected"></div>
+    <div id="UsersConnected" class="tabcontent">
+        <span>Ciao </span><span id="username-field" th:text="${username}"></span>
+        <div class="child-tab-users-connected">
+            <div class="header-users-connected">
+                <span id="title-header">Utenti connessi</span>
+            </div>
 
-    <div id="area-chat"></div>
+            <div class="list-users-connected"></div>
+        </div>
+    </div>
+
+    <div id="Chat" class="tabcontent">
+        <div class="sec-left">
+            <div id="sec-title-chats">
+                <span id="title-chat">Chats</span>
+            </div>
+
+            <div id="all-chats"></div>
+        </div>
+
+        <div id="area-chat"></div>
+    </div>
+
+    <div id="Inviti" class="tabcontent"></div>
+
+    <!--modal notifica-->
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="title-modal" style="display: flex; align-items: center; gap: 10px;"></div>
+                </div>
+
+                <div class="modal-body">
+                    <p id="modal-body"></p>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-open-chat-modal" data-dismiss="modal" onclick="redirectToChat(event)">Vai alla chat</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+
     <script th:src="@{/js/app.js}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js" integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D" crossorigin="anonymous"></script>
 </body>
 </html>
