--- a/src/main/resources/static/Style/index.css
+++ b/src/main/resources/static/Style/index.css
@@ -45,7 +45,7 @@ body {font-family: Arial;}
 
 .list-users-connected{
     height: 250px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .image-profile {
