--- a/src/main/resources/static/Style/index.css
+++ b/src/main/resources/static/Style/index.css
@@ -1,13 +1,61 @@
+body, html{
+    height: 100%;
+}
+
 body {font-family: Arial;}
 
-/* Style the tab */
+.tab {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #6d6a6a;
+}
+
+.tab button {
+    display: flex;
+    gap: 7px;
+    /* flex-direction: column; */
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    color: lightgray;
+    align-items: center;
+}
+
+.tab button:hover {
+    background-color: #424549;
+}
+
+.tab button.active {
+    background-color: #424549;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    height: 85vh;
+    overflow-y: auto;
+}
+
+#icon-online {
+    width: 15px;
+    height: 15px;
+    background-color: green;
+    border-radius: 50%;
+}
+
+/*
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
 
-/* Style the buttons inside the tab */
 .tab button {
     background-color: inherit;
     float: left;
@@ -19,23 +67,26 @@ body {font-family: Arial;}
     font-size: 17px;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
     background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
 .tab button.active {
     background-color: #ccc;
 }
 
-/* Style the tab content */
 .tabcontent {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
     height: 85vh;
+}*/
+
+#content-flex {
+    background-color: #282b30;
+    display: flex;
+    height: 100%;
 }
 
 #title-chat{
@@ -43,15 +94,16 @@ body {font-family: Arial;}
     font-weight:bolder;
 }
 
+/*
 .list-users-connected{
     height: 250px;
     overflow-y: scroll;
-}
+}*/
 
 .image-profile {
-    font-size: 15pt;
-    width: 40px;
-    height: 40px;
+    font-size: 13pt;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     color: #ffffff;
     margin-right: 2%;
@@ -59,9 +111,9 @@ body {font-family: Arial;}
     text-align: center;
 }
 
+/*
 .child-tab-users-connected {
     width: 20%;
-    /* border: 1px solid black; */
     margin: auto;
     padding: 1%;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -73,14 +125,26 @@ body {font-family: Arial;}
     margin-bottom: 5%;
     font-size: large;
     font-weight: bold;
-}
+}*/
 
-.single-user{
+.single-user {
     display: flex;
     align-items: center;
     margin-top: 3%;
+    color: lightgray;
+    margin-left: 4%;
 }
 
-.modal{
+.alert{
     display: none;
+}
+
+.sec-right {
+    background-color: #36393e;
+    width: 20%;
+    height: 100%;
+}
+
+span#span-no-user-connected {
+    color: lightgray;
 }
