--- a/src/main/resources/static/Style/index.css
+++ b/src/main/resources/static/Style/index.css
@@ -94,11 +94,13 @@ body {font-family: Arial;}
     font-weight:bolder;
 }
 
-/*
 .list-users-connected{
-    height: 250px;
-    overflow-y: scroll;
-}*/
+    overflow-y: auto;
+}
+
+.list-all-invitations{
+    overflow-y: auto;
+}
 
 .image-profile {
     font-size: 13pt;
@@ -110,6 +112,31 @@ body {font-family: Arial;}
     align-content: center;
     text-align: center;
 }
+
+#invitation-notification {
+    display: none;
+    align-items: center;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    border: none;
+}
+
+dialog {
+    width: 50%;
+    border-radius: 10px;
+    /* position: absolute; */
+    top: -70%;
+    left: 50%;
+    transform: translate(-50%, -20px);
+    outline: none;
+    opacity: 0;
+    transition: opacity 1s ease, transform 1s ease;
+    pointer-events: none;
+}
+
 
 /*
 .child-tab-users-connected {
@@ -153,4 +180,49 @@ span#span-no-user-connected {
     margin-left: auto;
     padding: 4px 7px;
     box-shadow: rgb(188 183 183 / 20%) 0px 2px 8px 0px;
+}
+
+
+.sec-buttons-action-invitation {
+    margin-left: auto;
+}
+
+button.btn-action-invite {
+    width: 35px;
+    height: 35px;
+    background-color: #424549;
+    border: none;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 50%;
+}
+
+span#label-count-invitations {
+    margin-left: auto;
+    border-radius: 50%;
+    /* background-color: #424549; */
+    /* padding: 5px 10px; */
+}
+
+.message-notification{
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.image-notification-profile {
+    font-size: 13pt;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    color: #ffff;
+    margin-right: 1%;
+    align-content: center;
+    text-align: center;
+}
+
+dialog .notification-header{
+    align-items: center;
+    margin-bottom: 1%;
 }
